# Kawashiro_Frame_G474_hy

./: .clangd  .gitignore  .mxproject  CMakeLists.txt  Kawashiro_Frame_G474.ioc  README.md  STM32G474XX_FLASH.ld  dap.cfg  flash.sh  format.sh  run.sh
Core/Inc/: FreeRTOSConfig.h  adc.h  crc.h  dac.h  fdcan.h  i2c.h  main.h  opamp.h  spi.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h  usart.h
Core/Src/: adc.c  app_freertos.c  crc.c  dac.c  dma.c  fdcan.c  gpio.c  i2c.c  main.c  opamp.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_hal_timebase_tim.c  stm32g4xx_it.c  syscalls.c  sysmem.c  system_stm32g4xx.c  tim.c  usart.c
MDK-ARM/: Kawashiro_Frame_G474.uvguix.admin  Kawashiro_Frame_G474.uvguix.河城秋雾  Kawashiro_Frame_G474.uvoptx  Kawashiro_Frame_G474.uvprojx  startup_stm32g474xx.s
MDK-ARM/Kawashiro_Frame_G474/: Kawashiro_Frame_G474.hex  Kawashiro_Frame_G474.lnp
Middlewares/: port.c  portmacro.h
Project/Algorithm_Drivers/: CRC8_CRC16.c  CRC8_CRC16.h  Function.c  Function.h  PID.c  PID.h  Power_Limit.c  Power_Limit.h  QuaternionEKF.c  QuaternionEKF.h  Vofa.c  Vofa.h  controller.c  controller.h  kalman_filter.c  kalman_filter.h  user_lib.c  user_lib.h
Project/BSP/: BMI088Middleware.c  BMI088Middleware.h  BMI088driver.c  BMI088driver.h  Buzzer.c  Buzzer.h  DWT.c  DWT.h  Flash.c  Flash.h  Key.c  Key.h  LED.c  LED.h  PWM.c  PWM.h
Project/Commnuicate_Drivers/: CAN_Driver.c  CAN_Driver.h  USART_Driver.c  USART_Driver.h  USB_Driver.c  USB_Driver.h
Project/Hardware_Drivers/: Motor_DAMIAO_Driver.c  Motor_DAMIAO_Driver.h  Motor_DJI_Driver.c  Motor_DJI_Driver.h  Motor_DrEmpower.c  Motor_DrEmpower.h  Motor_Driver.c  Motor_Driver.h  Motor_Unitree_Driver.c  Motor_Unitree_Driver.h  Referee_Unpack.c  Referee_Unpack.h  Remote_Control.c  Remote_Control.h  SuperCap_Driver.c  SuperCap_Driver.h
Project/Robot_Application/: Aim.c  Aim.h  Chassis.c  Chassis.h  Communicate.c  Communicate.h  Define.h  ErrorHandle.c  Gimbal.c  Gimbal.h  INS.c  INS.h  Key_LED.c  Key_LED.h  RoboControl.c  RoboControl.h  Shoot.c  Shoot.h
Project/UI/: UI_Task.c  UI_Task.h  ui.h  ui_default_Dynamic_0.c  ui_default_Dynamic_0.h  ui_default_Dynamic_1.c  ui_default_Dynamic_1.h  ui_default_Dynamic_2.c  ui_default_Dynamic_2.h  ui_default_Static_0.c  ui_default_Static_0.h  ui_default_Static_1.c  ui_default_Static_1.h  ui_default_Static_10.c  ui_default_Static_10.h  ui_default_Static_2.c  ui_default_Static_2.h  ui_default_Static_3.c  ui_default_Static_3.h  ui_default_Static_4.c  ui_default_Static_4.h  ui_default_Static_5.c  ui_default_Static_5.h  (+11 more)
(+568 files in other folders)
